Fix calendar visibility bug

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -40,6 +40,7 @@
   --color-orange: #FFAC33;
   --color-light-green: #64FFAA;
   --color-light-gray: #ADA9A9DC;
+  --color-dark-gray: #292F3D;
 }
 
 /* Dark theme */
@@ -79,6 +80,7 @@
   --color-orange: #FFAC33;
   --color-light-green: #64FFAA;
   --color-light-gray: #ADA9A9DC;
+  --color-dark-gray: #292F3D;
 }
 
 
